Example code added to README